# yt-music-cli

./: README.md  install.sh  pyproject.toml
yt_music_cli/: player.py
yt_music_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
