[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-music-cli"
version = "1.0.0"
description = "A terminal-based YouTube Music player for Linux"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["youtube", "music", "terminal", "cli", "player", "mpv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "ytmusicapi>=1.0.0",
    "yt-dlp>=2023.0.0",
]

[project.scripts]
yt-music = "yt_music_cli.player:main"

[project.urls]
Homepage = "https://github.com/yourusername/yt-music-cli"
Issues = "https://github.com/yourusername/yt-music-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
